# libncl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CMake.yml
src/: CMakeLists.txt  ncl_hash_table.c  ncl_hash_table.h  ncl_interp.c  ncl_interp.h  ncl_interp.pvt.h  ncl_lexer.c  ncl_lexer.h  ncl_parser.c  ncl_parser.h  ncl_symset.c  ncl_symset.h  ncl_value.c  ncl_value.h
tests/: CMakeLists.txt  file-reader.c  file-reader.h  node-dumper.c  node-dumper.h  test-lexer-err.in  test-lexer-err.out  test-lexer.c  test-lexer.in  test-lexer.out  test-parser-err.out  test-parser-ok.ncl  test-parser-ok.out  test-parser.c  test1.c  test2.c  test3.c  test3.out  test4.c  test4.out  test5.c  test6.c  test6.out
